--- a/404.html
+++ b/404.html
@@ -3,11 +3,6 @@ layout: default
 title: 404 - Page not found
 permalink: /404.html
 ---
-
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
-  <br/>
-
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <h1>This page doesn't exist (404 error).</h1>
 </div>
